Se cambio el tipo de captions, se optimizo el codigo y ahora en promeio cada 4.1 Mins se genera todo un video

--- a/channels/wealth_wisdom/channel.yaml
+++ b/channels/wealth_wisdom/channel.yaml
@@ -36,6 +36,18 @@ video:
   aspect_ratio: "9:16" # Shorts vertical format
   width: 768
   height: 1366
+  subtitles:
+    font: "DejaVu Sans"
+    font_size: 70
+    bold: true
+    color: "#FFFF00" # Yellow
+    outline_color: "#000000"
+    outline_width: 5
+    bg_color: "#00000080" # Semi-transparent black box
+    margin_v: 0
+    alignment: 10 # Center of screen
+    max_lines: 1 # Speed reading mode
+    max_length: 15 # Short phrases for retention
 
 # Scene settings
 scenes:
